# ILikeToasts-Sonder

./: .gitignore  .pre-commit-config.yaml  README.md  _config.yml  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  setup.cfg
.github/workflows/: ci.yml
backend/: Dockerfile  prompts.py  pyproject.toml  pytest.ini
backend/backend/: __init__.py  celery.py  settings.py  urls.py
backend/llm/: models.py  prompts.py
backend/media/pagination/: pagination.py
backend/music/: admin.py  models.py  ollama_client.py  serializers.py  spotify_client.py  tasks.py  urls.py  views.py
backend/music/clients/: ollama_client.py  spotify_client.py  steam_client.py  tmdb_client.py
backend/music/helper/: lastfm_retriever_help.py
backend/music/migrations/: 0001_initial.py  0002_album_spotify_id_artist_spotify_id_song_spotify_id_and_more.py  0003_artist_followers_artist_popularity.py  0004_song_artists_alter_song_album_playlist.py  0005_album_wiki_summary_artist_wiki_summary_and_more.py  0006_song_genres.py  0007_mediaitem.py  0008_remove_mediaitem_uploaded_at_mediaitem_height_and_more.py  0009_remove_mediaitem_title_mediaitem_category_and_more.py  0010_song_bop.py  0011_alter_song_bop.py  0012_productioncompany_tmdbgenre_tmdblist_tmdbtvmediaitem.py  0013_tmdbmoviemediaitem.py  0014_gamedeveloper_gamegenre_gamepublisher_steamgame.py
backend/music/tests/integration/: test_views.py
backend/music/tests/unit/: test_models.py  test_spotify_client.py
backend/music/utils/: data_importer.py  retrievers.py  spotify_data_importer.py
docker/mysql-init/: ci-user.sql
docs/: index.md
docs/albums/: albums.md
docs/artists/: artists.md
docs/games/: games.md
docs/media/: media.md
docs/pictures/: pictures.md
docs/tracks/: tracks.md
docs/ytReco/: ytReco.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: albumAPI.ts
frontend/src/pages/: AlbumsPage.tsx  ArtistsPage.tsx  GamesPage.tsx  HomePage.tsx  MoviesPages.tsx  PicturesPages.tsx  SeriesPages.tsx  TripsPage.tsx
frontend/src/styles/: album.css  global.css  header.css  review.styles.tsx
frontend/src/types/: spotify.ts
mr-frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json
mr-frontend/src/: App.tsx
mr-frontend/src/api/: ApiRoutes.tsx  albumAPI.ts  service.tsx
mr-frontend/src/constants/: ApiRoutes.tsx
mr-frontend/src/layouts/: Layout.tsx
mr-frontend/src/pages/: AlbumsPage.tsx  AnimesPage.tsx  ArtistsPage.tsx  GalleryPageTemplate.tsx  GamesPage.tsx  HomePage.tsx  MoviesPages.tsx  PicturesPages.tsx  SeriesPages.tsx  SinglesPage.tsx  TracksStatsPage.tsx  TripsPage.tsx  YoutubeRecoPage.tsx
mr-frontend/src/styles/: album.css  global.css  global.styles.tsx  review.styles.tsx
mr-frontend/src/types/: games.ts  spotify.ts  tmdb.ts
(+61 files in other folders)
